fix: address code review feedback - externalize CORS origins, enforce JWT-only branch validation, add FK comments
- Externalize CORS allowed-origins in SecurityConfig via cors.allowed-origins property
- Enforce JWT authentication requirement in BranchInterceptor (deny non-JWT auth)
- Add comments explaining intentional FK constraint absence in migrations

Co-authored-by: rasterdevapps <253283228+rasterdevapps@users.noreply.github.com>